--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   .modal.show{display:flex;animation:fadeIn 0.3s ease forwards;}
   .modal-card{background:rgba(0,0,0,0.8);padding:30px;border-radius:20px;display:flex;gap:20px;align-items:center;justify-content:center;flex-direction:column;color:var(--text);max-width:400px;text-align:center;}
   .modal-xaraf{font-size:64px;font-weight:900;}
-  .modal-emoji{font-size:120px;margin:15px 0;}
+  .modal-emoji{font-size:120px;margin:15px 0;cursor: pointer;}
   .modal-sentence{font-size:20px;}
   .close-btn{margin-top:10px;padding:8px 12px;border:none;border-radius:12px;cursor:pointer;font-weight:bold;}
   @keyframes fadeIn{from{opacity:0}to{opacity:1}}
@@ -81,7 +81,12 @@
 </div>
 <footer>© ZamzamProjects 2025</footer>
 <script>
-const letters=[{l:'B',w:'Buug',e:'📚'},{l:'T',w:'Tufaax',e:'🍎'},{l:'J',w:'Jaranjaro',e:'🪜'},{l:'X',w:'Xiddig',e:'⭐'},{l:'KH',w:'Khiyaar',e:'🥒'},{l:'D',w:'Doon',e:'🛶'},{l:'R',w:'Roob',e:'🌧️'},{l:'S',w:'Sariir',e:'🛏️'},{l:'SH',w:'Shimbir',e:'🐦'},{l:'DH',w:'Dhurwaa',e:'🐺'},{l:'C',w:'Calan',e:'🇸🇴'},{l:'G',w:'Geed',e:'🌳'},{l:'F',w:'Faras',e:'🐎'},{l:'Q',w:'Qorrax',e:'☀️'},{l:'K',w:'Kalluun',e:'🐟'},{l:'L',w:'Libax',e:'🦁'},{l:'M',w:'Mas',e:'🐍'},{l:'N',w:'Nacnac',e:'🍬'},{l:'W',w:'Waraabe',e:'🐺'},{l:'H',w:'Hooyo',e:'👩'},{l:'Y',w:'Yaxaas',e:'🐊'}];
+
+const letters=[{l:'B',w:'Buug',e:'📚',audio:'audio/B Baa.m4a'},{l:'T',w:'Tufaax',e:'🍎',audio:'audio/T tufsax.m4a'},{l:'J',w:'Jaranjaro',e:'🪜',audio:'audio/J jaran jaro.m4a'},{l:'X',w:'Xiddig',e:'⭐',audio:'audio/X xidig.m4a'},
+{l:'KH',w:'Khiyaar',e:'🥒',audio:'audio/Kh khijaar.m4a'},{l:'D',w:'Doon',e:'🛶',audio:'audio/Da doon.m4a'},{l:'R',w:'Roob',e:'🌧️',audio:'audio/R Roob.m4a'},{l:'S',w:'Sariir',e:'🛏️',audio:'audio/S sariir.m4a'},{l:'SH',w:'Shimbir',e:'🐦',audio:'audio/Sh shmbir.m4a'},{l:'DH',w:'Dhurwaa',e:'🐺',audio:'audio/Dh Dhurwaa.m4a'},
+{l:'C',w:'Calan',e:'🇸🇴',audio:'audio/C Calan.m4a'},{l:'G',w:'Geed',e:'🌳',audio:'audio/G geel.m4a'},{l:'F',w:'Faras',e:'🐎',audio:'audio/F Faras.m4a'},{l:'Q',w:'Qorrax',e:'☀️',audio:'audio/Q qorax.m4a'},{l:'K',w:'Kalluun',e:'🐟',audio:'audio/K kalluun.m4a'},{l:'L',w:'Libax',e:'🦁',audio:'audio/L libaax.m4a'},
+{l:'M',w:'Mas',e:'🐍',audio:'audio/M masas.m4a'},{l:'N',w:'Nacnac',e:'🍬',audio:'audio/N nacnac.m4a'},{l:'W',w:'Waraabe',e:'🐺',audio:'audio/W waraabe.m4a'},{l:'H',w:'Hooyo',e:'👩',audio:'audio/H hooyo.m4a'},{l:'Y',w:'Yaxaas',e:'🐊',audio:'audio/Y yaxaas.m4a'}];
+
 const vowels=[{l:'A',w:'Aqal',e:'🏠'},{l:'E',w:'Eey',e:'🐕'},{l:'I',w:'Isha',e:'👁️'},{l:'O',w:'Orod',e:'🏃'},{l:'U',w:'Ubax',e:'🌸'}];
 letters.concat(vowels).forEach(d=>d.sentence=`${d.l} waa ${d.w}.`);
 const gridDisplay=document.getElementById('gridDisplay');
@@ -91,6 +96,7 @@ const mEmoji=document.getElementById('mEmoji');
 const mSentence=document.getElementById('mSentence');
 const closeModal=document.getElementById('closeModal');
 let currentType='upper';
+let currentAudio = null;
 function renderGrid(type){gridDisplay.innerHTML='';let data=[];
 if(type==='upper') data=letters;
 else if(type==='lower') data=letters.map(l=>({...l,l:l.l.toLowerCase()}));
@@ -98,8 +104,36 @@ else if(type==='vowelsUpper') data=vowels;
 else if(type==='vowelsLower') data=vowels.map(v=>({...v,l:v.l.toLowerCase()}));
 data.forEach(l=>{const card=document.createElement('div');card.className='card';card.innerHTML=`<div class='xaraf'>${l.l}</div><div class='emoji'>${l.e}</div><div class='eray'>${l.w}</div>`;card.onclick=()=>openModal(l);gridDisplay.appendChild(card);});}
 renderGrid(currentType);
-function openModal(l){mXaraf.textContent=l.l;mEmoji.textContent=l.e;mSentence.textContent=l.sentence;modal.classList.add('show');document.body.style.overflow='hidden';}
-function closeModalFunc(){modal.classList.remove('show');document.body.style.overflow='';}
+function openModal(l){
+  mXaraf.textContent = l.l;
+  mEmoji.textContent = l.e;
+  mSentence.textContent = l.sentence;
+  modal.classList.add('show');
+  document.body.style.overflow = 'hidden';
+
+  // when the big emoji in the model is clicked, play the audio (if it exists)
+  mEmoji.onclick = () => {
+    if (!l.audio) return;          // do nothing if no audio defined
+
+    // stop any audio already playing
+    if (currentAudio) {
+      currentAudio.pause();
+      currentAudio.currentTime = 0;
+    }
+
+    currentAudio = new Audio(l.audio);
+    currentAudio.play().catch(err => console.error(err));
+  };
+}
+function closeModalFunc(){
+  modal.classList.remove('show');
+  document.body.style.overflow = '';
+
+  if (currentAudio) {
+    currentAudio.pause();
+    currentAudio.currentTime = 0;
+  }
+}
 closeModal.onclick=closeModalFunc;
 modal.addEventListener('click',e=>{if(e.target===modal)closeModalFunc();});
 document.addEventListener('keydown',e=>{if(e.key==='Escape')closeModalFunc();});
