Auto-close modal after audio ends

--- a/index.html
+++ b/index.html
@@ -123,6 +123,9 @@ function openModal(l){
 
     currentAudio = new Audio(l.audio);
     currentAudio.play().catch(err => console.error(err));
+    currentAudio.onended = () => {
+      closeModalFunc();
+    };
   };
 }
 function closeModalFunc(){
