Add Ebook page nav link

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
   <button onclick="showSection('learn','vowelsUpper')">Shaqal Waaweyn</button>
   <button onclick="showSection('learn','vowelsLower')">Shaqal Yaryar</button>
   <button onclick="showSection('quiz')">Quiz</button>
+  <button onclick="location.href='ebook.html'">Ebook</button>
   <button onclick="showSection('contact')">Contact</button>
 </nav>
 <main>
